--- a/includes/modals/user-modals.html
+++ b/includes/modals/user-modals.html
@@ -25,6 +25,10 @@
                         <input type="text" class="form-control" id="lastNameInput" name="lastName" placeholder="Last Name" required>
                     </div>
                     <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="emailInput" name="email" placeholder="Email" required>
+                    </div>
+                    <div class="mb-3">
                         <label for="role" class="form-label">Role</label>
                         <select class="form-control" name="role" id="roleSelect" required>
                             <option value="">-- Role</option>
