--- a/includes/contents/project-module-tab.html
+++ b/includes/contents/project-module-tab.html
@@ -5,6 +5,7 @@
                 <th>ModuleID</th>
                 <th>Module Name</th>
                 <th>Module Description</th>
+                <th>Progress</th>
                 <th>Action</th>
             </tr>
         </thead>
