development: fix and continuation of builds

--- a/includes/contents/project-ticket-tab.html
+++ b/includes/contents/project-ticket-tab.html
@@ -5,6 +5,7 @@
                 <th>TicketID</th>
                 <th>Subject</th>
                 <th>Description</th>
+                <th>Date Created</th>
                 <th>Assigned To</th>
                 <th>Status</th>
                 <th>Action</th>
