development: completed functions for project attachments.

--- a/includes/modals/project-detail-modals.html
+++ b/includes/modals/project-detail-modals.html
@@ -108,3 +108,26 @@
         </div>
     </div>
 </div>
+
+<!-- Attachment Modal -->
+<div class="modal fade" id="attachmentsModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="attachmentsModal" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="attachmentsModalLabel">New Attachment</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form id="attachmentsForm" enctype="multipart/form-data">
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <input type="file" class="form-control" id="file" name="file" required>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary closeButton" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Add Attachment</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
