development: add changes on design for the system

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -2,52 +2,43 @@
     margin: 0;
     padding: 0;
     width: 15%;
-    background-color: #383869;
+    background-color: #19191a;
     position: fixed;
     height: 100%;
     overflow: auto;
+    color: #d6d6d6 !important;
+    border-right: 1px solid #4f4f4f;
+    top: 7.2%;
 }
   
 .sidebar a {
     display: block;
-    color: black;
-    padding: 16px;
+    color: #d6d6d6;
+    padding: 10px;
     text-decoration: none;
 }
 
 .sidebar a.active {
-    background-color: #525281;
-    color: white;
-    border-left: 6px solid #fbfbfb;
+    border: 1px solid #4f4f4f;
+    background-color: #373737;
 }
 
 .sidebar a:hover:not(.active) {
-    background-color: #525281;
-    color: white;
-    border-left: 6px solid #fbfbfb;
-}
-
-.sidebar a{
-    padding-left: 30px;
-    color: #fff;
+    background-color: #373737;
+    /* border-left: 6px solid #fbfbfb; */
+    transition: 0.2s;
 }
 
 .sidebar a>i{
     margin-right: 15px;
 }
 
-.logo{
-    height: 145px;
-    padding-top: 20px;
+.sidebar > #menu {
+    padding-top: 15px;
 }
 
-.logo img{
-    height: 100px;
-    margin: auto;
-    display: block;
-}
-.logo:hover{
-    cursor: pointer;
+#menu > a{
+    padding-left: 15px;
 }
 
 @media screen and (max-width: 700px) {
