development: changes on class for database query and functions for sql queries executpion

--- a/includes/contents/project-tech-tab.html
+++ b/includes/contents/project-tech-tab.html
@@ -4,7 +4,7 @@
             <tr>
                 <th>ID</th>
                 <th>Technology</th>
-                <th>Description</th>
+                <th>Remarks</th>
                 <th>Version</th>
                 <th>Action</th>
             </tr>
