--- a/includes/modals/project-modals.html
+++ b/includes/modals/project-modals.html
@@ -16,6 +16,12 @@
                         <label for="projectDescription" class="form-label">Project Description</label>
                         <textarea class="form-control" name="projectDescription" id="projectDescriptionInput" cols="30" rows="5" placeholder="Project Description" required></textarea>
                     </div>
+                    <div class="mb-3">
+                        <label for="projectStatus" class="form-label">Status</label>
+                        <select name="status" id="projectStatus" class="form-control" required>
+                            <option value="">--</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary closeButton" data-bs-dismiss="modal">Close</button>
