--- a/includes/modals/project-detail-modals.html
+++ b/includes/modals/project-detail-modals.html
@@ -143,18 +143,18 @@
             <form id="techForm">
                 <div class="modal-body">
                     <div class="mb-3">
-                        <input type="text" class="form-control" name="technology" placeholder="Name" required>
+                        <input type="text" class="form-control" name="technology" id="techNameInput" placeholder="Name" required>
                     </div>
                     <div class="mb-3">
-                        <textarea name="description" class="form-control" placeholder="Description"></textarea>
+                        <textarea name="description" class="form-control" id="techDescInput" placeholder="Description"></textarea>
                     </div>
                     <div class="mb-3">
-                        <input type="text" class="form-control" name="version" placeholder="Version" required>
+                        <input type="text" class="form-control" name="version" id="techVersionInput" placeholder="Version" required>
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary closeButton" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Add Technology</button>
+                    <button type="submit" class="btn btn-primary">Save</button>
                 </div>
             </form>
         </div>
