--- a/includes/modals/project-detail-modals.html
+++ b/includes/modals/project-detail-modals.html
@@ -7,9 +7,10 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form id="ownerForm">
+                <input type="hidden" name="add_project_owner" value="1">
                 <div class="modal-body">
                     <div class="mb-3">
-                        <select name="owner" class="form-control" id="owners" required>
+                        <select name="owner" class="form-control" id="ownersSelect" required>
                             <option value="">-- </option>
                         </select>
                     </div>
@@ -65,7 +66,7 @@
                         <div class="col">
                             <div class="mb-3">
                                 <label class="form-label" for="ticketCategory">Category</label>
-                                <select name="category" id="ticketCategory" class="form-control" required>
+                                <select name="category" id="categorySelect" class="form-control" required>
                                     <option value="">--</option>
                                 </select>
                             </div>
@@ -91,8 +92,8 @@
                                 </select>
                             </div>
                             <div class="mb-3">
-                                <label for="assignTo" class="form-label">Assigned To</label>
-                                <select name="assign_to" id="assignTo" class="form-control">
+                                <label for="assignToSelect" class="form-label">Assigned To</label>
+                                <select name="assign_to" id="assignToSelect" class="form-control">
                                     <option value=""></option>
                                 </select>
                             </div>
