--- a/includes/modals/project-modals.html
+++ b/includes/modals/project-modals.html
@@ -7,6 +7,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form id="projectForm">
+                <input type="hidden" name="create_update_project" value="1">
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="projectName" class="form-label">Project Name</label>
