--- a/includes/modals/ticket-modals.html
+++ b/includes/modals/ticket-modals.html
@@ -7,7 +7,8 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form id="ticketForm">
-                <input type="hidden" name="create_ticket" value="1">
+                <input type="hidden" name="create_update_ticket" id="formActionInput" value="1">
+                <input type="hidden" name="ticket_id" id="ticketIdInput">
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="categorySelect" class="form-label">Category</label>
@@ -22,17 +23,23 @@
                         </select>
                     </div>
                     <div class="mb-3">
-                        <label for="ticketSubject" class="form-label">Subject <i>(Short Description)</i></label>
+                        <label for="ticketSubjectInput" class="form-label">Subject <i>(Short Description)</i></label>
                         <textarea class="form-control" id="ticketSubjectInput" name="subject" placeholder="Short Description" rows="1" required></textarea>
                     </div>
                     <div class="mb-3">
-                        <label for="ticketSubject" class="form-label">Description</label>
+                        <label for="ticketDescriptionInput" class="form-label">Description</label>
                         <textarea class="form-control" id="ticketDescriptionInput" name="description" placeholder="Description" required></textarea>
+                    </div>
+                    <div class="mb-3" id="statusDiv">
+                        <label for="StatusSelect">Status</label>
+                        <select name="status" class="form-control" id="statusSelect">
+                            <option value="">--</option>
+                        </select>
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary closeButton" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary">Save</button>
                 </div>
             </form>
         </div>
