--- a/includes/contents/project-module-tab.html
+++ b/includes/contents/project-module-tab.html
@@ -1,4 +1,4 @@
-<div class="content-tab" id="modulesTab">
+<div class="content-tab" id="modulesTab" style="display: none;">
     <table class="table table-hover table-striped" id="modulesTable">
         <thead>
             <tr>
