--- a/includes/modals/project-modals.html
+++ b/includes/modals/project-modals.html
@@ -11,22 +11,28 @@
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="projectName" class="form-label">Project Name</label>
-                        <input type="text" class="form-control" id="projectNameInput" name="projectName" placeholder="Project Name" required>
+                        <input type="text" class="form-control" id="projectNameInput" name="project_name" placeholder="Project Name" required>
                     </div>
-                    <div class="mb-3">
+                    <!-- <div class="mb-3">
                         <label for="projectDescription" class="form-label">Project Description</label>
-                        <textarea class="form-control" name="projectDescription" id="projectDescriptionInput" cols="30" rows="5" placeholder="Project Description" required></textarea>
+                        <textarea class="form-control" name="project_description" id="projectDescriptionInput" cols="30" rows="5" placeholder="Project Description" required></textarea>
                     </div>
                     <div class="mb-3">
-                        <label for="projectStatus" class="form-label">Status</label>
-                        <select name="status" id="projectStatus" class="form-control" required>
+                        <label for="phaseSelect" class="form-label">Phase</label>
+                        <select name="phase" id="phaseSelect" class="form-control" required>
                             <option value="">--</option>
                         </select>
                     </div>
+                    <div class="mb-3">
+                        <label for="statusSelect" class="form-label">Status</label>
+                        <select name="status" id="statusSelect" class="form-control" required>
+                            <option value="">--</option>
+                        </select>
+                    </div> -->
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary closeButton" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save Project</button>
+                    <button type="submit" class="btn btn-primary" id="btnSubmit">Submit Project</button>
                 </div>
             </form>
         </div>
